--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Incrementing Counter</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="counter-container">
+        <i class="fab fa-twitter fa-3x"></i>
+        <div class="counter" data-target="12000">12000</div>
+        <span>Twitter Followers</span>
+    </div>
+
+    <div class="counter-container">
+        <i class="fab fa-youtube fa-3x"></i>
+        <div class="counter" data-target="5000">5000</div>
+        <span>YouTube Subscribers</span>
+    </div>
+
+    <div class="counter-container">
+        <i class="fab fa-facebook fa-3x"></i>
+        <div class="counter" data-target="7500">7500</div>
+        <span>Facebook Fans</span>
+    </div>
 
     <script src="script.js"></script>
 </body>
